# sonyalphapy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
CrSDK_v1/: CMakeLists.txt  README.md
CrSDK_v1/app/: CameraDevice.cpp  CameraDevice.h  ConnectionInfo.cpp  MessageDefine.cpp  MessageDefine.h  PropertyValueTable.cpp  PropertyValueTable.h  RemoteCli.cpp
CrSDK_v1/app/CRSDK/: CameraRemote_SDK.h  CrCommandData.h  CrDefines.h  CrDeviceProperty.h  CrError.h  IDeviceCallback.h
CrSDK_v1/cmake/: enum_cli_hdr.cmake  enum_cli_src.cmake
sonyalphapy/: __init__.py  _callback.py  _sdk.py  _vcall.py  camera.py  enums.py  errors.py
